<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:id="@+id/profile_screen_layout"
        tools:context=".presentation.view.fragments.ProfileScreen">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_profile_pic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginVertical="10dp"
            android:src="@drawable/person_avatar"
            app:layout_constraintBottom_toTopOf="@+id/txt_user_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/txt_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="15dp"
            app:layout_constraintBottom_toTopOf="@+id/editTextThought"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/editTextThought"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonPost"
            android:background="@drawable/curved_edit_text"
            android:gravity="top"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:hint="@string/txt_question_thoughts"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine|textNoSuggestions"
            android:maxLength="255"
            android:padding="10dp"
            android:layout_marginBottom="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/buttonPost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/txt_post"
            android:background="@drawable/rounded_corner_button"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.503" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_post"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="15dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonPost"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>